# DiachronicEmb-BigHistData

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_test_macos.yml  ci_test_preproc_train.yml  ci_test_ubuntu.yml
scripts/alignment/: align-procrustes-from-vectors.py  align-procrustes.py
scripts/exploration/: changepoint_detection.ipynb  compare_aligned.py  compare_quality.py  dynamic_time_warping.ipynb  visualize_diachronic_emb.ipynb  word_diachrony.ipynb
scripts/postprocess/: merge_errors.py
scripts/postprocessing/: merge_errors.py
scripts/preprocess/: listpathsbyyear.py  preprocess-alto2txt-tocsv.py  preprocess-alto2txt-totxt.py  spell_checker.py
scripts/training/: config.yaml  train_diach_emb.py  train_fromcsv.py  train_fromtxt.py  utils.py
tests/: integration_test.py  requirements.txt  test_config.yaml  utils.py
tests/test_data/: time1.txt  time2.txt
